[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tltr"
version = "0.1.0"
description = "A simple CLI application to pick some random things."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "zorlack"}]
dependencies = ["click"]
keywords = ["cli", "tool", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.scripts]
tltr = "tltr.cli:tltr"

[tool.setuptools.packages]
# Explicitly include only the `tltr` package
find = { include = ["tltr"] }
